<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/signupName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter your name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218"
        android:background="@drawable/border_background"
        android:padding="10dp"

        />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.329"
        android:gravity="center"
        android:background="@drawable/border_background"
        android:padding="10dp"

        />


    <!--    Error Message -->

    <EditText
        android:id="@+id/signupPass"
        android:layout_width="209dp"
        android:layout_height="42dp"
        android:layout_marginStart="102dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="23dp"
        android:background="@drawable/border_background"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.585" />

    <EditText
        android:id="@+id/signupConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/border_background"
        android:ems="10"
        android:gravity="center"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.708"

        />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onRegister"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <TextView
        android:id="@+id/invalidEmailMessage"
        android:layout_width="148dp"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398"
        android:gravity="center"
        android:textColor="#FF0000"
        />

    <TextView
        android:id="@+id/invalidPassMsg"
        android:layout_width="394dp"
        android:layout_height="19dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintBottom_toTopOf="@+id/signupConfirmPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupPass"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center"
        android:textColor="#FF0000"


        />

    <TextView
        android:id="@+id/passMatchMsg"
        android:layout_width="184dp"
        android:layout_height="16dp"
        android:layout_marginStart="176dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupConfirmPass"
        app:layout_constraintVertical_bias="0.0"


        />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="365dp"
        android:layout_height="30dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Register to Quick Cash"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/signupBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <Spinner
        android:id="@+id/signupRoleSelection"
        android:layout_width="213dp"
        android:layout_height="37dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/signupPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invalidEmailMessage"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@drawable/border_background"
        />

    <TextView
        android:id="@+id/invalidRoleMsg"
        android:layout_width="200dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toTopOf="@+id/signupPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupRoleSelection"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center"
        android:textColor="#FF0000" />

    <Button
        android:id="@+id/login_onRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="178dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="69dp"
        android:text="Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>