<resources>
    <string name="app_name">QuickCash</string>
    <string name="INVALID_EMAIL_ADDRESS">Invalid email address</string>
    <string name="VALID_EMAIL_ADDRESS"></string>
    <string name="INVALID_PASSWORD">Password has to be at least 8 characters</string>
    <string name="INVALID_ROLE">Please select a valid role</string>
    <string name="VALID_PASSWORD"></string>
    <string name="PASSWORD_NOT_MATCHING">Password Must Match</string>
    <string name="PASSWORD_MATCHING"></string>
    <string name="FIREBASE_DB_URL">https://quick-cash-c28b9-default-rtdb.firebaseio.com/</string>
    <string name="select_job_type_hint">Select Job Type</string>
    <string name="CAD">CAD</string>

    <string-array name="roleSelection">
        <item>Select Role</item>
        <item>Employer</item>
        <item>Employee</item>
    </string-array>

    <!-- Updated string-array for job types with hint included -->
    <string-array name="job_types_array">
        <item>@string/select_job_type_hint</item> <!-- Reference to the hint string -->
        <item>IT Job</item>
        <item>Cashier</item>
        <item>Education</item>
        <item>Health Care</item>
        <item>Agriculture</item>
        <item>Finance</item>
        <item>Hospitality</item>
        <item>Business Administration</item>
        <item>Manufacturing</item>
        <item>Transportation</item>
        <!-- Add any additional job types here -->
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
